--- a/public/css/animate.css
+++ b/public/css/animate.css
@@ -1223,8 +1223,8 @@ Copyright (c) 2014 Daniel Eden
 @-webkit-keyframes fadeInLeft {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(-12%, 0, 0);
-    transform: translate3d(-12%, 0, 0);
+    -webkit-transform: translate3d(-20px, 0, 0);
+    transform: translate3d(-20px, 0, 0);
   }
 
   100% {
@@ -1250,9 +1250,9 @@ Copyright (c) 2014 Daniel Eden
 @keyframes fadeInLeft {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    -ms-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
+    -webkit-transform: translate3d(-20px, 0, 0);
+    -ms-transform: translate3d(-20px, 0, 0);
+    transform: translate3d(-20px, 0, 0);
   }
 
   100% {
@@ -1265,9 +1265,9 @@ Copyright (c) 2014 Daniel Eden
 @keyframes fadeInLeft {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(-2%, 0, 0);
-    -ms-transform: translate3d(-2%, 0, 0);
-    transform: translate3d(-2%, 0, 0);
+    -webkit-transform: translate3d(-20px, 0, 0);
+    -ms-transform: translate3d(-20px, 0, 0);
+    transform: translate3d(-20px, 0, 0);
   }
 
   100% {
@@ -1644,8 +1644,8 @@ Copyright (c) 2014 Daniel Eden
 
   100% {
     opacity: 0;
-    -webkit-transform: translate3d(12%, 0, 0);
-    transform: translate3d(12%, 0, 0);
+    -webkit-transform: translate3d(60px, 0, 0);
+    transform: translate3d(60px, 0, 0);
   }
 }
 
@@ -1656,8 +1656,8 @@ Copyright (c) 2014 Daniel Eden
 
   100% {
     opacity: 0;
-    -webkit-transform: translate3d(2%, 0, 0);
-    transform: translate3d(2%, 0, 0);
+    -webkit-transform: translate3d(50px, 0, 0);
+    transform: translate3d(50px, 0, 0);
   }
 }
 
@@ -1668,8 +1668,8 @@ Copyright (c) 2014 Daniel Eden
 
   100% {
     opacity: 0;
-    -webkit-transform: translate3d(15%, 0, 0);
-    -ms-transform: translate3d(15%, 0, 0);
+    -webkit-transform: translate3d(60px, 0, 0);
+    -ms-transform: translate3d(60px, 0, 0);
     transform: translate3d(15%, 0, 0);
   }
 }
