--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?65108279');
-  src: url('../font/fontello.eot?65108279#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?65108279') format('woff'),
-       url('../font/fontello.ttf?65108279') format('truetype'),
-       url('../font/fontello.svg?65108279#fontello') format('svg');
+  src: url('../font/fontello.eot?35436673');
+  src: url('../font/fontello.eot?35436673#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?35436673') format('woff'),
+       url('../font/fontello.ttf?35436673') format('truetype'),
+       url('../font/fontello.svg?35436673#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?65108279#fontello') format('svg');
+    src: url('../font/fontello.svg?35436673#fontello') format('svg');
   }
 }
 */
@@ -78,3 +78,10 @@
 .icon-barcode:before { content: '\e819'; } /* '' */
 .icon-delicious:before { content: '\e81a'; } /* '' */
 .icon-glass-1:before { content: '\e81b'; } /* '' */
+.icon-down-open-big:before { content: '\e81c'; } /* '' */
+.icon-left-open-big:before { content: '\e81d'; } /* '' */
+.icon-right-open-big:before { content: '\e81e'; } /* '' */
+.icon-up-open-big:before { content: '\e81f'; } /* '' */
+.icon-ok:before { content: '\e820'; } /* '' */
+.icon-plus:before { content: '\e821'; } /* '' */
+.icon-minus:before { content: '\e822'; } /* '' */
