--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,11 +11,9 @@
 		/* min-height:100%; */
 		background: white;
 		margin: 10px;
-		
 		box-shadow: 0 0 5px #C0C0C0;
-	
 		font-family: 'Ubuntu';
-}
+		} 
 
 	p,
 	textarea,
@@ -37,16 +35,45 @@
 		font:bold 14px 'Francois One';
 		text-transform:uppercase;
 	}
-	
+	label{
+		font-size:.9em;
+		font-weight:bolder;
+		margin-right: 15px;
+		padding-top:10px;
+		height:30px;
+		width:33px;
+		display:inline-block;
+	}
 	.right{float:right;}
 	.left{float:left;}
 	.none{display: none !important;}
 
-	.loader{
+	.centered{
+		position:absolute;
+		margin:auto;
+		top:0;
+		left:0;
+		right:0;
+		bottom:0;
+		height:0;
+	}
+
+	.loader-login-signup{
 	width: 22px;
 	position: absolute;
 	right: -23px;
 	top: 17px;
+	}
+
+	.loader-profile{
+    margin-top: 10px;	
+    width: 22px;
+	}
+
+	.loader-event{
+    margin-top: 24px;
+    margin-left: 5px;
+    width: 22px;
 	}
 
 	#mainWrap{ height: 96vh; }	
@@ -56,10 +83,10 @@
 		font: .8em 'Ubuntu';
 		margin: auto;
 		height: 16px;
-		background: rgb(255, 255, 242);
-		border-bottom: 1px solid rgb(255, 226, 226);
-		color: rgb(93, 94, 59);
+		background: rgb(234, 255, 219);
+		color: rgb(83, 100, 53);
 		border-radius: 3px;
+		border: 1px solid rgb(173, 241, 124);
 		padding: 7px;
 		padding-top: 8px;
 		left: 0;
@@ -68,6 +95,12 @@
 		width: 210px;
 		text-align: center;
 	}
+	#toastError{
+		background: rgb(255, 228, 232);
+	
+		border: 1px solid rgb(255, 190, 190);
+}
+	
 	.toast-icon{
 	    position: absolute;	
 	    left: 0px;
@@ -94,15 +127,17 @@
 	}
  	#menuWrap{
  		top:40px;
- 	}
+ 		width: 200px;
+ 		height: 330px;
+ 		position: relative;
+ 		margin-left: 50px;
+	}
 	#contact{
-    top: 130px;
- }
-	#events{
-    top: 100px;
- }
-	#profile{
  	}
+	#events{ 
+ 	}
+	#profile{   
+ 	} 
 	.menu{
 		top:40px;
 		color: #444;
@@ -112,16 +147,16 @@
 		font-size: 1.2em;
 	}
 	.menu-item{
-    font-size: 1em;
-    left: 50px;
-    top: 70px;
-    padding: 2px;
-    padding-top: 4px;
-    padding-left: 12px;
-    width: 100px;
-    height: 21px;
-    border-radius: 2px;
-}	
+	    font-size: 1em;
+	    padding: 2px;
+	    padding-top: 4px;
+	    padding-left: 12px;
+	    margin-bottom: 3px;
+	    width: 100px;
+	    height: 21px;
+	    border-radius: 2px;
+	    position: relative;
+	}	
 	.menu-item:hover{
 		cursor:pointer;
 		background: #F3F3F3;
@@ -142,14 +177,9 @@
 		cursor:pointer;
 	}
 	#loginWrap, #signupWrap,#contactWrap{
-	  bottom: 0;
-	  left: 0;
 	  height: 280px;
 	  margin: auto; 
 	  padding:10px;
-	  position: absolute;
-	  top: 0;
-	  right: 0;
 	}
 	#loginWrap,
 	#signupWrap{
@@ -176,7 +206,8 @@
 	}
 	
 .themeBtn:hover{
-		box-shadow: 1px 1px 1px rgb(73, 117, 62); 
+		box-shadow: 1px 1px 1px rgb(104, 165, 89); 
+		opacity: .9;
 }
 
 
@@ -195,8 +226,7 @@
     	display: block; 
     	padding: 9px;	
     	border-radius: 3px 3px 0 0;
-    	transition: all ease-in 0.1s;
-} 
+	} 
 	.input-field:focus{
 		box-shadow: 1px 1px 5px #CECECE;
 	}
@@ -213,7 +243,7 @@
 
 	/*    CSS concernant le profile utilisateur   */
 	#profileWrap{
-		width: 260px;
+		width: 750px;
 		height: 300px;
 		margin: 0;
 		padding: 20px;
@@ -225,14 +255,13 @@
 }
 	#pictureWrap{
 		text-align:center;
-		background: rgb(245, 245, 245);
+		background: rgb(245,245,245);
 		box-shadow: 0 2px 2px #DFDFDF;
 		padding-bottom: 15px;
 		border:1px dashed transparent;
 		width: 180px;
 		padding-top: 6px;
 		margin: 0 auto;
-		margin-bottom: 30px;
 		height: 160px;
 		-webkit-transition: all .4s;
 		transition: all .4s;
@@ -242,30 +271,44 @@
 	}
 	
 	.fieldsWrap{
-		width:100%;
+		width: 520px;
+		margin-left: 40px;
 		height: 170px;
 }
-	.fieldsWrap *{
-		padding:10px;	
+	.fieldsWrap input, .fieldsWrap textarea{
+		padding: 10px 0 5px 0px;	
 		border: none;
 		border-bottom: 1px solid #ddd;
 }
 	#profileWrap h2{
     margin-bottom: 40px;
 	}
-	
+
+	#profileWrap h5{
+    font-size: .7em;
+    text-align: center;
+    color: #888;
+    margin-top: 20px;
+    width: 100%;
+	}
+	#profileWrap h5 span{
+		margin-right:5px;
+		font-size:1.1em;
+	}
+	#name{
+		width:180px;
+		margin-right: 30px;
+	}
 	#age{
-		width: 30px;
-	}
-	#location{
-		height:37px;
-	}
-	#profileWrap textarea{
-	width: 90%;
+		width: 40px;
+		margin-right: 160px;
 }
-	#profileWrap option{
-		padding:5px;
-	}
+
+	#profileWrap textarea{
+	width: 70%;
+	height: 25px;
+}
+
 	#profileWrap #validate{
 		width: 80px;
 	    
@@ -274,7 +317,7 @@
 		background: #73E073;   
 		border: none;
 		color: white;
-		margin: 6px 6px 0 0;
+		margin: 6px 6px 0 35px;
 	}
 	.profileInput{
 		-webkit-transition: all .5s;
@@ -293,7 +336,7 @@
 		width: 0%;
 		background: #73E073;
 		border-radius: 3px;
-		margin-bottom: 10px;
+		margin-bottom: 20px;
 		-webkit-transition: width .9s;
 		transition: width .9s; 
 		text-align: center;
@@ -332,17 +375,6 @@
     background: #73E073;
     color: white;
     margin: 10px 20px 0 0;
-	}
-
-	#eventsWrap{
-		width:500px;
-		height:1px;
-		position:absolute;
-		margin:auto;
-		top:0;
-		left:0;
-		bottom:0;
-		right:0;
 	}
 
 
