--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?35436673');
-  src: url('../font/fontello.eot?35436673#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?35436673') format('woff'),
-       url('../font/fontello.ttf?35436673') format('truetype'),
-       url('../font/fontello.svg?35436673#fontello') format('svg');
+  src: url('../font/fontello.eot?25183597');
+  src: url('../font/fontello.eot?25183597#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?25183597') format('woff'),
+       url('../font/fontello.ttf?25183597') format('truetype'),
+       url('../font/fontello.svg?25183597#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?35436673#fontello') format('svg');
+    src: url('../font/fontello.svg?25183597#fontello') format('svg');
   }
 }
 */
@@ -85,3 +85,5 @@
 .icon-ok:before { content: '\e820'; } /* '' */
 .icon-plus:before { content: '\e821'; } /* '' */
 .icon-minus:before { content: '\e822'; } /* '' */
+.icon-direction:before { content: '\e823'; } /* '' */
+.icon-chat-alt:before { content: '\e824'; } /* '' */
