--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,46 +1,52 @@
+#allChatsWrap{
+	width:700px;
+	height:400px;
+}
 .chatWrap{
-	position: absolute;
-	top: 37px;
-	left: 80px;
 	width: 500px;
 	height: 230px;
 	background: rgba(255,255,255,0.95);
+	-webkit-box-shadow: 0 0 3px #73E073;
 	box-shadow: 0px 0px 3px #73E073;
 	border: 2px solid #73E073;
 	padding: 30px 0 30px 0;
 	border-radius: 300px;
+	position: absolute;
+}
+.chatLineWrap{
+	outline:none;
 }
 .chatLineWrap{
 	height: 80%;
 	overflow-x: hidden;
 }
 .chatInputWrap{
-	height: 20%;
+	height: 25%;
+	width: 460px;
+	margin: 0 auto;
 	text-align: center;
 	padding-top: 21px;
 }
 .chatLine{
 	padding: 0 70px 0 70px;
-
+	margin: 5px 0;
 	width: 360px;
 	text-align: center;
 }
 .cha{
-	font-size: .75em;
+	font-size: .8em;
 	color: white;
 	padding: 10px;
 	border-radius: 4px;
-
 	display: inline-block;
 }
 .cha1{
 	background: #73E073;
 }
 .cha2{
-
-	border: 1px solid #73E073;
+	border: 1px solid #C5BE88;
 	color: rgb(44, 43, 38);
-	margin: 10px 0 10px 0;
+	background: rgb(255, 255, 244);
 }
 .chatInputWrap input[type="text"]{
 	width: 200px;
@@ -50,12 +56,12 @@
 	border-bottom: 1px dashed #ccc;
 }
 .chatInputWrap input[type="submit"]{
-	width: 20px;
+	width: 25px;
 	height: 20px;
 	border: none;
 	color: white;
 	background: #73E073;
-	border-radius: 30px;
+	border-radius: 3px;
 	font-size: .8em;
 }
 .tri{
@@ -67,4 +73,7 @@
 	position: absolute;
 	top: 125px;
 	left: -17px;
+}
+.chat-active{
+	z-index: 1000;
 }
