--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 *{
 }
-html{
+html{ 
 }
 body{
 	/* min-height:100%; */
@@ -19,9 +19,11 @@ input{
 	outline: none;
 }
 h2{
-	font: bold 16px 'Francois One';
-	text-transform: uppercase;
-	text-align: center;
+	font: 800 2em 'Raleway';
+	letter-spacing: -1px;
+	color: #383838;
+	text-align: left;
+	text-shadow: 0 0 1px rgb(209, 209, 209);
 }
 h3{
 	font:bold 14px 'Francois One';
@@ -37,39 +39,26 @@ label{
 	text-align: right;
 	display:inline-block;
 }
-.labelTextArea{
-	vertical-align:top;
-}
+.labelTextArea{vertical-align:top;}
+.rel{position:relative;}
 .right{float:right;}
 .left{float:left;}
 .none{display: none !important;}
 .centered{
 	position:absolute;
 	margin:auto;
+	margin-top: 100px;
+	width: 750px;
 	top:0;
 	left:0;
 	right:0;
 	bottom:0;
-	height:0;
 }
-.loader-login-signup{
+.loader{
 	width: 22px;
 	position: absolute;
-	right: -23px;
-	top: 17px;
-}
-.loader-profile{
-	width: 22px;
-	position: absolute;
-	bottom: -47px;
-	right: -5px;
-}
-.loader-event{
-	margin-top: 24px;
-	width: 22px;
-	float: right;
-	position: absolute;
-	right: -30px;
+	top: 5px;
+	right: -27px;
 }
 #mainWrap{
 }
@@ -96,28 +85,28 @@ label{
 	background: rgb(255, 228, 232);
 }
 #toastInfo{
-	background: rgb(231, 229, 255);
+	background: white;
+	border: 1px solid #73E073;
 }
 .toast-icon{
 	position: absolute;
-	left: 0px;
+	left: 0;
 	background: #7BBE7B;
 	height: 24px;
 	border-radius: 3px 0 0 3px;
 	width: 30px;
 	padding-top: 7px;
-	top: 0px;
-	color: white;
+	top: 0;
 }
 #toastError .toast-icon{
 	background: rgb(243, 143, 143);
 }
 #toastInfo .toast-icon{
-	background: rgb(164, 185, 216);
+	background: #73E073;
+	color: white;
 }
 .menuBtn{
 	left: 50px;
-	-webkit-transition: all .6s;
 	transition: all .6s;
 }
 .menuBtnActive{
@@ -195,7 +184,7 @@ label{
 #contact:hover{
 	cursor:pointer;
 }
-#loginWrap, #signupWrap,#contactWrap{
+#loginWrap, #signupWrap{
 	height: 280px;
 	margin: auto;
 	padding:10px;
@@ -223,7 +212,8 @@ label{
 	text-transform: uppercase;
 	font-size: 10px;
 }
-.themeBtn{
+.themeBtn,
+.themeBtnToggle{
 	width: 120px;
 	height: 34px;
 	border: none;
@@ -263,7 +253,6 @@ label{
 	margin-top: 10px;
 	font: 12px 'Ubuntu';
 	text-decoration: underline;
-	width: 100x;
 }
 .sub-actions:hover{
 	cursor:pointer;
@@ -289,9 +278,8 @@ label{
 	width: 180px;
 	padding-top: 6px;
 	margin: 0 auto;
-	height: 160px;
-	-webkit-transition: all .4s;
-	transition: all .4s;
+	height: 160px; 
+	transition: .4s;
 }
 #pictureWrap:hover{
 	border:1px double #dde;
@@ -311,6 +299,10 @@ label{
 }
 .fieldsWrap .input-row-wrap:last-child{
 	margin-top:10px;
+}
+#loginWrap h2,
+#signupWrap h2{ 
+	text-align:center;
 }
 #profileWrap h2{
 	margin-bottom: 40px;
@@ -342,20 +334,24 @@ label{
 #profileWrap #validate{
 
 	margin: 6px 6px 0 35px;
+	
+
+	position: relative;
+
 }
 .profileInput{
 	-webkit-transition: all .5s;
 	transition: all .5s;
 }
 .modified{
-	color: rgb(233, 52, 7);
+	color: rgb(240, 67, 0);
 }
 .validating{
 	background: #F3F3F3;
 	border-radius: 3px 3px 0 0;
 }
 .validating-btn{
-	background:#E6E6E6;
+	background: #E6E6E6;
 	color:rgb(60,60,60);
 }
 .validating-btn:hover{
@@ -380,8 +376,9 @@ label{
 }
 
 #contactWrap{
-	width:600px;
-	top: 0;
+}
+#contactWrap form{
+	margin: 50px 0 0 50px;
 }
 #contactWrap input{
 	width: 40%;
@@ -423,22 +420,42 @@ label{
 	top: 50px;
 	left: 1110px;
 }
+#thumbWrap img{
+	
+}
 #thumbInfos{
 	margin-left:8px;
-	margin-top: 2px;
 	display: inline-block;
+	position: absolute;
+	top: 4px;
 }
 #thumbName{
 	font-weight:normal;
 	text-align: left;
+	font-size: 1.2em;
+	margin-left: 8px;
 	/* display: inline-block; */
 }
-#logout{
-	font-size: .8em;
+.actionsWrap{
+	margin-top:10px;
+}
+.actionsStyle span:before{
+	content:""; 
+	margin-right:5px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding-left: 15px;
 
 }
-#logout:hover,
-#cancelEvent:hover{
+.action{
+	font-size: .8em;
+	margin-left: 10px;
+}
+.action:hover{
 	cursor:pointer;
 	text-decoration:underline;
+}
+.action:hover::before{
+	background-color: rgb(250, 250, 250);
+	border-color:gr
 }
