--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ label{
 .rel{position:relative;}
 .right{float:right;}
 .left{float:left;}
-.none{display: none !important;} 
+.none{display: none; !important;} 
 .centered{
 	position:absolute;
 	margin:auto;
