--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -9,7 +9,7 @@
 	width: 500px;
 	height: 230px;
 	background: rgba(255,255,255,0.85);
-	border: 2px solid #CACACA;
+	border: 1px solid #D5D5D5;
 	padding: 30px 0px;
 	border-radius: 4px;
 	position: absolute;
@@ -44,7 +44,7 @@
 	display: inline-block;
 }
 .cha1{
-	background: #7ED57E;
+	background: #636363;
 	color: white;
 }
 .cha2{
@@ -59,11 +59,11 @@
 	border-bottom: 1px dashed #ccc;
 }
 .chatInputWrap input[type="submit"]{
-	width: 25px;
-	height: 20px;
+	width: 5px;
+	height: 10px;
 	border: none;
 	color: white;
-	background: #73E073;
+	background: #FF4747;
 	border-radius: 3px;
 	font-size: .8em;
 }
@@ -80,7 +80,7 @@
 	height: 0;
 	border-style: solid;
 	border-width: 20px 18px 20px 0;
-	border-color: transparent #73E073 transparent transparent;
+	border-color: transparent #B8B8B8 transparent transparent;
 	position: absolute;
 	top: 125px;
 	left: -18px;
