--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -6,32 +6,33 @@
 	z-index:9999;
 }
 .chatWrap{
-	width: 500px;
-	height: 230px;
+	width: 100%;
+	height: 130%;
 	background: rgba(255,255,255,0.85);
 	border: 1px solid #D5D5D5;
-	padding: 30px 0px;
 	border-radius: 4px;
 	position: absolute;
+	box-sizing: border-box;
 }
 .chatLineWrap{
 	outline:none;
 }
 .chatLineWrap{
-	height: 80%;
+	height: 89%;
 	overflow-x: hidden;
+	box-sizing: border-box;
 }
 .chatInputWrap{
-	height: 25%;
-	width: 460px;
-	margin: 0 auto;
+	height: 11%;
+	border-radius: 0 0 3px 3px;
+	width: 100%;
 	text-align: center;
-	padding-top: 21px;
+	box-sizing: border-box;
+	background: rgb(238, 238, 238);
 }
 .chatLine{
 	padding: 0 70px 0 70px;
 	margin: 5px 0;
-	width: 360px;
 	text-align: center;
 }
 .cha{
@@ -43,6 +44,12 @@
 	border-radius: 4px;
 	display: inline-block;
 }
+.chatLineWrap .chatLine:first-child{
+	margin-top:30px;
+}
+.chatLineWrap .chatLine:last-child{
+	margin-bottom:30px;
+}
 .cha1{
 	background: #636363;
 	color: white;
@@ -52,38 +59,46 @@
 	background: #E6E6E6;
 }
 .chatInputWrap input[type="text"]{
-	width: 200px;
+	width: 100%;
+	height: 100%;
 	padding: 0 0 4px 13px;
 	font-size: .8em;
+	color: rgb(99, 99, 99);
 	border: none;
-	border-bottom: 1px dashed #ccc;
+	border-top: 1px solid #B4B4B4;
+	background: none;
+	box-sizing: border-box;
 }
 .chatInputWrap input[type="submit"]{
-	width: 5px;
-	height: 10px;
+	width: 25px;
+	height: 15px;
 	border: none;
-	color: white;
-	background: #FF4747;
+	background: #E0E0E0;
 	border-radius: 3px;
 	font-size: .8em;
+	position: relative;
+	top: -25px;
+	right: -50px;
+	float: right;
 }
 .chat-host{
 	left:75px;
-	top:-116px;
+	top: -96px;
 }
 .chat-asker{
-	left:100px;
-	top: -55px;
+	left: 50px;
+	top: -15%;
 }
 .tri{
 	width: 0;
 	height: 0;
 	border-style: solid;
 	border-width: 20px 18px 20px 0;
-	border-color: transparent #B8B8B8 transparent transparent;
+	border-color: transparent #E7E7E7 transparent transparent;
 	position: absolute;
-	top: 125px;
+	top: 105px;
 	left: -18px;
+	display: none;
 }
 .chat-active{
 	z-index: 1000;
