--- a/public/css/fontello/css/map.css
+++ b/public/css/fontello/css/map.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'fontello';
-  src: url('../font/fontello.eot?91165025');
-  src: url('../font/fontello.eot?91165025#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?91165025') format('woff'),
-       url('../font/fontello.ttf?91165025') format('truetype'),
-       url('../font/fontello.svg?91165025#fontello') format('svg');
+  font-family: 'map';
+  src: url('../font/map.eot?75458251');
+  src: url('../font/map.eot?75458251#iefix') format('embedded-opentype'),
+       url('../font/map.woff?75458251') format('woff'),
+       url('../font/map.ttf?75458251') format('truetype'),
+       url('../font/map.svg?75458251#map') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,14 +13,14 @@
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?91165025#fontello') format('svg');
+    font-family: 'map';
+    src: url('../font/map.svg?75458251#map') format('svg');
   }
 }
 */
  
  [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
+  font-family: "map";
   font-style: normal;
   font-weight: normal;
   speak: none;
