--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -7,7 +7,7 @@
 }
 .chatWrap{
 	width: 100%;
-	height: 130%;
+	height: 100%;
 	background: rgba(255,255,255,0.85);
 	border: 1px solid #D5D5D5;
 	border-radius: 4px;
@@ -28,7 +28,9 @@
 	width: 100%;
 	text-align: center;
 	box-sizing: border-box;
-	background: rgb(238, 238, 238);
+	background: rgb(58, 58, 58);
+	border: 1px solid rgb(46, 46, 46);
+	border-top: none;
 }
 .chatLine{
 	padding: 0 70px 0 70px;
@@ -84,6 +86,9 @@
 .chat-host{
 	left:75px;
 	top: -96px;
+}
+.chatWrap.chat-host{
+	height:250px
 }
 .chat-asker{
 	left: 50px;
