--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -2,11 +2,12 @@
 	width:700px;
 	height:400px;
 }
-.on-top{
-	z-index:9999;
+.surfacing{
+	z-index:1 !important;
 }
+
 .chatWrap{
-	width: 100%;
+	width: 93%;
 	height: 100%;
 	background: rgba(255,255,255,0.85);
 	border: 1px solid #D5D5D5;
@@ -18,18 +19,18 @@
 	outline:none;
 }
 .chatLineWrap{
-	height: 89%;
+	height: 88%;
 	overflow-x: hidden;
 	box-sizing: border-box;
 }
 .chatInputWrap{
-	height: 11%;
-	border-radius: 0 0 3px 3px;
+	height: 12%;
+	/* border-radius: 0 0 3px 3px; */
 	width: 100%;
 	text-align: center;
 	box-sizing: border-box;
-	background: rgb(90, 90, 90);
-	border: 1px solid rgb(46, 46, 46);
+	background: #535353;
+	border: 1px solid #535353;
 	border-top: none;
 }
 .chatLine{
@@ -63,24 +64,24 @@
 .chatInputWrap input[type="text"]{
 	width: 100%;
 	height: 100%;
-	padding: 0 0 4px 13px;
+	padding: 0 0 1px 13px;
 	font-size: .8em;
-	color: rgb(99, 99, 99);
+	color: rgb(241, 241, 241);
 	border: none;
 	border-top: 1px solid #B4B4B4;
 	background: none;
 	box-sizing: border-box;
 }
 .chatInputWrap input[type="submit"]{
-	width: 25px;
-	height: 15px;
+	width: 5px;
+	height: 32px;
 	border: none;
-	background: #E0E0E0;
-	border-radius: 3px;
+	background: #424242;
+	border-radius: 0 0 2px 0;
 	font-size: .8em;
 	position: relative;
-	top: -25px;
-	right: -50px;
+	top: -32px;
+	right: -1px;
 	float: right;
 }
 .chat-host{
@@ -91,8 +92,8 @@
 	height:250px
 }
 .chat-asker{
-	left: 50px;
-	top: -15%;
+	left: 0;
+	top: -25px;
 }
 .tri{
 	width: 0;
@@ -107,4 +108,21 @@
 }
 .chat-active{
 	z-index: 1000;
+}
+
+.close-chat{
+	position: absolute;
+	box-sizing: border-box;
+	width: 26px;
+	height: 18px;
+	padding: 1px 0 0 2px;
+	right: -10px;
+top: -8px;
+border-radius: 20px;
+border: 1px solid rgb(190, 190, 190);
+color: #808080;
+background: white;
+}
+.close-chat:hover{
+	cursor:pointer
 }
