--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,9 @@ input{
 	resize: none;
 	outline: none;
 }
+.hl{
+	background: rgb(255, 236, 236);
+}
 h2{
 	font: 800 2em 'Raleway';
 	letter-spacing: -1px;
@@ -44,6 +47,7 @@ label{
 .right{float:right;}
 .left{float:left;}
 .none{display: none; !important;}
+.filtered{display: none !important;}
 .hidden{visibility:hidden;}
 .centered{
 	position:absolute;
@@ -71,7 +75,7 @@ label{
 body > header{
 	width: 100%;
 	height: 33px;
-	background: url('/img/elements/texture-png1.png');
+	background-image: url('/img/elements/texture-png1.png');
 	box-shadow: 0 0 5px rgb(37, 37, 37);
 	position: fixed;
 top: 0;
@@ -111,8 +115,8 @@ body > header > h1{
 	z-index: 150;
 }
 .toastError{
-	background: rgb(189, 64, 64);
-	border: 1px solid rgb(175, 49, 49);
+	background: rgb(175, 49, 49);
+	border: 1px solid rgb(150, 34, 34);
 	color: white;
 }
 .toastInfo{
@@ -134,7 +138,7 @@ body > header > h1{
 	top: 0;
 }
 .toastError .toast-icon{
-	background: rgb(160, 49, 49);
+	background: rgb(148, 40, 40);
 }
 .toastInfo .toast-icon{
 	background: #000000;
@@ -361,6 +365,9 @@ body > header > h1{
 }
 .fieldsWrap textarea{
 	padding-top:6px;
+}
+.profileInput{
+	color: #999;
 }
 .fieldsWrap .input-row-wrap:last-child{
 	margin-top:10px;
