--- a/public/css/events.css
+++ b/public/css/events.css
@@ -193,9 +193,9 @@ input[type="number"]{
 	transition: all .3s;
 	font-size: .7em;
 	color: #7A7A7A;
-	padding: 10px 12px;
+	padding: 10px 12px; 
 	border-radius: 2px;
-	margin: 0 3px;
+	margin: 4px;
 	/* border: 1px solid #FFFFFF; */
 	background: #F5F5F5;
 }
@@ -250,3 +250,13 @@ input[type="number"]{
 	letter-spacing: 1px;
 	font-size: .9em;
 }
+
+#createEventWrap .tags-wrap{
+	display: inline-block;
+	width: 80%;
+}
+
+label[for="tags"]{
+	vertical-align: top
+}
+
