--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,24 +62,25 @@ label{
 .disabled{
 	opacity: .3 !important; !important 
 }
-.loader{
-	width: 22px;
-	position: absolute;
-	top: 5px;
-	right: -27px;
+.loaderWrap{
+	z-index: 1000;
+	top: 7px;
+	position: fixed;
+	left: 47%; 
+	opacity: 0;  
+	display: none
 }
-#signupWrap .loader,
-#loginWrap .loader{
-	top: 8px;
-}
+
 body > header{
 	width: 100%;
 	height: 33px;
 	background-image: url('/img/elements/texture-png1.png');
 	box-shadow: 0 0 5px rgb(37, 37, 37);
 	position: fixed;
-top: 0;
-left: 0;
+
+	top: 0;
+
+	left: 0;
 	z-index: 140;
 }
 body > header > img{
@@ -112,8 +113,8 @@ body > header > h1{
 	top: -1px;
 	width: 410px;
 	text-align: center;
-	z-index: 150;
-}
+	z-index: 9999;
+} 
 .toastError{
 	background: rgb(175, 49, 49);
 	border: 1px solid rgb(150, 34, 34);
@@ -149,18 +150,14 @@ body > header > h1{
 	background: #34743E;
 	color: white;
 }
-.menuBtn{
-	display:none;
-}
-.menuBtnActive{
-	left:30px;
-	color: #919191!important;
-}
+
 #menuWrap{
 	position: fixed;
-	top: -38px;
 	left: 240px;
-	width: 80%;
+	width: 79%;
+	top: 3px;
+	left: 0;
+	padding-left: 20%;
 }
 
 .align-top{
@@ -174,12 +171,6 @@ body > header > h1{
 	color:#A5A5A5;
 }
 .menu{
-	top:40px;
-	color: #444;
-	position: absolute;
-	z-index: 9;
-	font-family: 'Calibri';
-	font-size: 1.2em;
 }
 .menu-item{
 	display:none;
@@ -444,15 +435,15 @@ body > header > h1{
 	background:white;
 }
 .progress_bar{
-	height: 3px;
+	position: absolute;
+	top: 33px;
+	height: 4px;
 	width: 0%;
-	background: #999999;
-	border-radius: 3px;
-	margin-bottom: 20px;
+	background: rgb(52, 52, 52);
 	-webkit-transition: width .9s;
 	transition: width .9s;
 	text-align: center;
-	box-shadow: 0 2px 1px rgb(202, 202, 202);
+	box-shadow: 0 2px 2px rgb(128, 128, 128);
 	color: white;
 }
 #contactWrap{
@@ -587,7 +578,7 @@ body > footer{
 	position:absolute;
 	top:0;
 	left:0;
-	background: rgba(0,0,0,.8);
+	background: rgba(0,0,0,.84);
 	z-index:500;
 }
 .overlay .overlayMsgWrap{	
